[gd_scene load_steps=2 format=3 uid="uid://dejek3ivmkt18"]

[ext_resource type="Script" path="res://scripts/spell.gd" id="1_rkpqt"]

[node name="Spell" type="Area2D"]
script = ExtResource("1_rkpqt")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="SelfDestruct" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_self_destruct_timeout"]
